--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,39 @@
-<h1>SOME GAMES</h1>
-<ul>
-    <li *ngFor="let game of games">
-        <h2>{{game.title}}</h2>
-        <p>{{game.description}}</p>
-    </li>
-</ul>
+<app-nav-menu></app-nav-menu>
+
+<div class="card border-0">
+    <img src="assets/images/Salesbanneraugust.png" class="card-img-top" alt="...">
+    <div class="card-body d-flex justify-content-between align-items-center">
+        <div>
+            <h3 class="card-title"> Time to get some Sales Action</h3>
+            <p>Are you serious? Come if you dare. . . </p>
+        </div>
+        <div>
+            <button class="btn btn-primary">get game</button>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid p-3">
+    <div class="row g-3 justify-content-center">
+        <div class="col-6 col-md-4 col-lg-3 " *ngFor="let game of gameCollection">
+            <a href="/">
+                <img [src]="game.image_link" alt="" width="100%">
+            </a>
+        </div>
+    </div>
+</div>
+
+
+
+<swiper-container
+slides-per-view="6"
+navigation="true"
+lazy="true"
+>
+    <swiper-slide *ngFor="let game of gameCollection;">
+        <img [src]="game.image_link" alt="image slide" style="display: block; width: 100%;" loading="lazy">
+        <span>{{game.title}}</span>
+    </swiper-slide>
+
+</swiper-container>
+
