--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
+.carousel-control-next,
+.carousel-control-prev {
+    opacity: 0.7;
+    width: 3%;
+
+}
+
+.disabled {
+    display: none;
+}
+
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
+    background-color: #007ee5;
+    border-radius: 50%;
+}
+
+.carousel-indicators {
+    display: none;
+}
+
+img {
+    border-radius: 10px;
+}
