--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,24 +1,16 @@
-.carousel-control-next,
-.carousel-control-prev {
-    opacity: 0.7;
-    width: 3%;
-
-}
-
-.disabled {
-    display: none;
-}
-
-.carousel-control-next-icon,
-.carousel-control-prev-icon {
-    background-color: #007ee5;
-    border-radius: 50%;
-}
-
-.carousel-indicators {
-    display: none;
-}
-
 img {
     border-radius: 10px;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:hover {
+    filter: brightness(90%);
+}
+
+ul a:hover {
+    filter: brightness(50%);
 }
