--- a/client/src/app/nav-menu/nav-menu.component.html
+++ b/client/src/app/nav-menu/nav-menu.component.html
@@ -1,11 +1,11 @@
 <div class="container">
   <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
     <div class="col-md-3 mb-2 mb-md-0">
-      <img routerLink="/latest" src="assets/images/gettagameLogotranscropped.svg" alt="logo" style="width: 150px;">
+      <img routerLink="/" src="assets/images/gettagameLogotranscropped.svg" alt="logo" style="width: 150px;">
     </div>
 
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-      <li><a class="nav-link px-2 link-secondary" routerLink="/latest" routerLinkActive="active-menu-item">Latest</a></li>
+      <li><a class="nav-link px-2 link-secondary" routerLink="/" >Home</a></li>
       <li><a class="nav-link px-2" routerLink="/deals" routerLinkActive="active-menu-item">Deals</a></li>
       <li><a class="nav-link px-2" routerLink="/browse" routerLinkActive="active-menu-item">Browse</a></li>
     </ul>
