Implemented Login, Register, JwT, Hash & Salt

--- a/client/src/app/nav-menu/nav-menu.component.html
+++ b/client/src/app/nav-menu/nav-menu.component.html
@@ -5,14 +5,18 @@
     </div>
 
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-      <li><a class="nav-link px-2 link-secondary" routerLink="/" >Home</a></li>
+      <li><a class="nav-link px-2 link-secondary" routerLink="/">Home</a></li>
       <li><a class="nav-link px-2" routerLink="/deals" routerLinkActive="active-menu-item">Deals</a></li>
       <li><a class="nav-link px-2" routerLink="/browse" routerLinkActive="active-menu-item">Browse</a></li>
     </ul>
 
-    <div class="col-md-3 text-end">
-      <button type="button" class="btn btn-outline-primary me-2">Login</button>
-      <button type="button" class="btn btn-primary">Sign-up</button>
+    <div class="col-md-3 text-end" *ngIf="!(customerService.currentUser$ | async)">
+      <button type="button" class="btn btn-outline-primary me-2" routerLink="/login">Login</button>
+      <button type="button" class="btn btn-primary" routerLink="/register">Sign-up</button>
+    </div>
+
+    <div class="col-md-3 text-end" *ngIf="customerService.currentUser$ | async">
+      <button type="button" class="btn btn-outline-primary me-2" (click)="logout()">Logout</button>
     </div>
   </header>
 </div>
