Cart Section. Delete Option not ready

--- a/client/src/app/details/details.component.html
+++ b/client/src/app/details/details.component.html
@@ -9,10 +9,9 @@
                 <h1>{{game.title}}</h1>
                 <p>Larian Studios</p>
                 <h3>{{game.price}} €</h3>
-                <button class="btn btn-danger">Purchase</button>
+                <button class="btn btn-danger" (click)="addToCart()">Add To Cart</button>
             </div>
         </div>
-
 
         <div class="col-md-3 d-flex align-items-start justify-content-center order-md-2">
             <img class="w-50" src="assets/images/gettagameLogotrans500x500Whitecropped.svg" alt="">
