--- a/client/src/app/nav-menu/nav-menu.component.css
+++ b/client/src/app/nav-menu/nav-menu.component.css
@@ -1,7 +1,29 @@
-.active-menu-item{
-    border: 1px solid black;
-    border-radius: 10px;
-    background-color: gray;
-    padding: 5px 10px;
-    color: white !important;
+fa-icon {
+  font-size: 24px;
+}
+
+a img {
+  width: 50px;
+  border-radius: 50px;
+}
+
+.active-menu-item {
+  border: 1px solid black;
+  border-radius: 10px;
+  background-color: gray;
+  padding: 5px 10px;
+  color: white !important;
+}
+
+
+.sidenav-container {
+  position: fixed;
+  margin-top: -25px;
+
+  width: 100%;
+  height: 80vh;
+
+  backdrop-filter: blur(10px);
+  z-index: 1000;
+
 }
