Added remove cart item logic. responsive navbar. footer update

--- a/client/src/app/footer/footer.component.html
+++ b/client/src/app/footer/footer.component.html
@@ -6,22 +6,16 @@
         <div class="col-md-4">
             <ul class="list-unstyled">
                 <li>
-                    <a href="">Support</a>
+                    <a href="">Hire Me</a>
                 </li>
                 <li>
-                    <a href="">Privacy and Cookies</a>
+                    <a href="">Support Me</a>
                 </li>
                 <li>
-                    <a href="">Website Terms of Use</a>
+                    <a href="">Watch Me</a>
                 </li>
                 <li>
-                    <a href="">Sitemap</a>
-                </li>
-                <li>
-                    <a href="">Legal</a>
-                </li>
-                <li>
-                    <a href="">About Us</a>
+                    <a href="">About Me</a>
                 </li>
             </ul>
         </div>
@@ -31,33 +25,23 @@
                     <a href="">Terms of Service</a>
                 </li>
                 <li>
-                    <a href="">Software Usage Terms</a>
+                    <a href="">GDPR Stuff</a>
                 </li>
-                <li>
-                    <a href="">PS Store Cancellation Policy</a>
-                </li>
-                <li>
-                    <a href="">Health Warnings</a>
-                </li>
-                <li>
-                    <a href="">About Ratings</a>
-                </li>
+
             </ul>
         </div>
         <div class="col-md-4">
             <ul class="list-unstyled">
                 <li>
-                    <a href="">Facebook</a>
+                    <a href="">LinkedIn</a>
                 </li>
                 <li>
-                    <a href="">Twitter</a>
+                    <a href="">Github</a>
                 </li>
                 <li>
-                    <a href="">Youtube</a>
+                    <a href="">Website</a>
                 </li>
-                <li>
-                    <a href="">Instagram</a>
-                </li>
+
             </ul>
         </div>
     </div>
