--- a/client/src/app/cart/cart.component.html
+++ b/client/src/app/cart/cart.component.html
@@ -1,6 +1,6 @@
-<section class="h-100 h-custom ">
-    <div class="container h-100 pb-5 ">
-        <div class="row d-flex justify-content-center align-items-start h-100">
+<section>
+    <div class="container pb-5 ">
+        <div class="row d-flex justify-content-center align-items-start">
             <div class="col bg-white mb-5">
 
                 <!-- Cart Summary -->
@@ -14,28 +14,26 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let cartItem of cartItems">
+                        <tr *ngFor="let game of games">
                             <th scope="row">
                                 <div class="d-flex align-items-center">
-                                    <img [src]="cartItem.image_link" class="img-fluid rounded-3" style="width: 120px;">
+                                    <img [src]="game.image_link" class="img-fluid rounded-3" style="width: 120px;">
                                     <div class="flex-column ms-4">
-                                        <p class="mb-2">{{cartItem.title}}</p>
+                                        <p class="mb-2">{{game.title}}</p>
                                     </div>
                                 </div>
                             </th>
 
                             <td class="align-middle">
-
-                                <input min="0" name="quantity" [value]="1" type="number"
-                                    class="form-control form-control-sm" style="width: 50px;" />
-
-                            </td>
-                            <td class="align-middle">
-                                <p class="mb-0" style="font-weight: 500;">{{cartItem.price}} €</p>
+                                <p>1</p>
                             </td>
 
                             <td class="align-middle">
-                                <a (click)="removeCartItem(cartItem.id)">
+                                <p class="mb-0" style="font-weight: 500;">{{game.price}} €</p>
+                            </td>
+
+                            <td class="align-middle">
+                                <a (click)="removeCartItem(game.id)">
                                     <fa-icon [icon]="faTrash"></fa-icon>
                                 </a>
                             </td>
@@ -44,29 +42,28 @@
                 </table>
 
                 <!-- Payment Options and Credentials -->
-                <div class="card shadow-2-strong mb-5 mb-lg-0" style="border-radius: 16px;">
-                    <div class="card-body p-4">
+                <div class="  mb-5 mb-lg-0 border-0">
+                    <div class=" p-4 ">
                         <div class="row">
                             <div class="col-md-6 col-lg-4 col-xl-3 mb-4 mb-md-0">
                                 <form>
                                     <div class="d-flex flex-row pb-3">
                                         <div class="d-flex align-items-center pe-2">
-                                            <input class="form-check-input" type="radio" name="radioNoLabel"
-                                                id="radioNoLabel1v" value="" aria-label="..." checked />
+                                            <input class="form-check-input" type="radio" name="creditcard"
+                                                id="creditcard" value="creditcard" aria-label="creditcard" checked />
                                         </div>
 
                                         <div class="rounded border w-100 p-3">
                                             <p class="d-flex align-items-center mb-0">
-                                                Credit
-                                                Card
+                                                Credit Card
                                             </p>
                                         </div>
                                     </div>
 
                                     <div class="d-flex flex-row pb-3">
                                         <div class="d-flex align-items-center pe-2">
-                                            <input class="form-check-input" type="radio" name="radioNoLabel"
-                                                id="radioNoLabel2v" value="" aria-label="..." />
+                                            <input class="form-check-input" type="radio" name="debitcard"
+                                                id="debitcard" value="debitcard" aria-label="debitcard" />
                                         </div>
 
                                         <div class="rounded border w-100 p-3">
@@ -78,8 +75,8 @@
 
                                     <div class="d-flex flex-row">
                                         <div class="d-flex align-items-center pe-2">
-                                            <input class="form-check-input" type="radio" name="radioNoLabel"
-                                                id="radioNoLabel3v" value="" aria-label="..." />
+                                            <input class="form-check-input" type="radio" name="paypal"
+                                                id="paypal" value="paypal" aria-label="paypal" />
                                         </div>
 
                                         <div class="rounded border w-100 p-3">
@@ -91,8 +88,8 @@
                                 </form>
                             </div>
 
-                            <div class="col-md-6 col-lg-4 col-xl-6">
-                                <div class="row">
+                            <div class="col-md-6 col-lg-4 col-xl-6 ">
+                                <div class="row ">
                                     <div class="col-12 col-xl-6">
 
                                         <div class="form-floating mb-3 ">
