--- a/client/src/app/nav-menu/nav-menu.component.html
+++ b/client/src/app/nav-menu/nav-menu.component.html
@@ -52,7 +52,7 @@
               <a class="dropdown-item" routerLink="/cart">Current Cart</a>
             </li>
             <li role="menuitem">
-              <a class="dropdown-item">Account Information</a>
+              <a class="dropdown-item" routerLink="/customer/details">Account Information</a>
             </li>
             <li role="menuitem">
               <a class="dropdown-item" (click)="logout()">Logout</a>
