--- a/client/src/app/receipt/receipt.component.html
+++ b/client/src/app/receipt/receipt.component.html
@@ -1,1 +1,65 @@
-<p>receipt works!</p>
+<div class="receipt-wrapper text-md-center">
+    <div class="headline text-center">
+        <h1>Your order has been completed</h1>
+        <p>Follow the instructions to claim your games</p>
+    </div>
+
+    <div class="instruction-wrapper p-4 d-flex flex-column flex-md-row justify-content-center ">
+        <div class="instruction-box d-flex flex-md-column justify-content-center align-items-md-center gap-4">
+            <div class="step d-flex justify-content-center align-items-center">
+                <h2>
+                    1
+                </h2>
+            </div>
+            <div class="text-box">
+                <h3>
+                    Step
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae inventore, atque laboriosam
+                    asperiores
+                    temporibus ut nostrum animi ea! Aspernatur cupiditate delectus
+                </p>
+            </div>
+        </div>
+
+        <div class="instruction-box  d-flex flex-md-column justify-content-center align-items-md-center gap-4">
+            <div class="step d-flex justify-content-center align-items-center">
+                <h2>
+                    2
+                </h2>
+            </div>
+            <div class="text-box">
+                <h3>
+                    Step
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae inventore, atque laboriosam
+                    asperiores
+                    temporibus ut nostrum animi ea! Aspernatur cupiditate delectus
+                </p>
+            </div>
+        </div>
+
+        <div class="instruction-box  d-flex flex-md-column justify-content-center align-items-md-center gap-4">
+            <div class="step d-flex justify-content-center align-items-center">
+                <h2>
+                    3
+                </h2>
+            </div>
+            <div class="text-box">
+                <h3>
+                    Step
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae inventore, atque laboriosam
+                    asperiores
+                    temporibus ut nostrum animi ea! Aspernatur cupiditate delectus
+                </p>
+            </div>
+        </div>
+
+
+
+    </div>
+</div>
