--- a/client/src/app/customer/login/login.component.html
+++ b/client/src/app/customer/login/login.component.html
@@ -4,15 +4,15 @@
             alt="">
     </div>
 
-    <form #loginForm="ngForm" (ngSubmit)="login()" class="d-flex justify-content-center flex-column gap-2  ">
+    <form ngNativeValidate #loginForm="ngForm" (ngSubmit)="login()" class="d-flex justify-content-center flex-column gap-2  ">
         <div class="form-floating">
             <input [(ngModel)]="model.username" name="username" id="username" class="form-control" type="text"
-                placeholder="Enter username">
+                placeholder="Enter username" required>
             <label for="username" class="form-label">Username</label>
         </div>
         <div class="form-floating">
             <input [(ngModel)]="model.password" name="password" id="password" class="form-control" type="password"
-                placeholder="Enter password">
+                placeholder="Enter password" required>
             <label for="password" class="form-label">Enter your password</label>
         </div>
         <button class="btn btn-primary mt-4" type="submit">Login</button>
