--- a/client/src/app/deals/deals.component.html
+++ b/client/src/app/deals/deals.component.html
@@ -1,34 +1,9 @@
-<div class="card border-0 ">
-    <img src="assets/images/Salesbanneraugust.png" class="card-img-top" alt="...">
-    <div class="card-body d-flex justify-content-between align-items-center ps-5 pe-5 pt-5">
-        <div>
-            <h3 class="card-title"> Time to get some Sales Action</h3>
-            <p>Are you serious? Come if you dare. . . </p>
-        </div>
-        <div>
-            <button class="btn btn-primary">get game</button>
-        </div>
-    </div>
-</div>
-
-<div class="container-fluid p-5">
-    <div class="row g-3 justify-content-center ">
-        <div class="col-6 col-md-4 col-lg-3  " *ngFor="let game of games">
-            <a href="/">
-                <img [src]="game.image_link"
-                    onerror="this.onerror=null; this.src='assets/images/placeholdersquare/image-placeholder-500x500.jpg'"
-                    alt="" width="100%">
-            </a>
-        </div>
-    </div>
-</div>
-
 <div class="container-fluid p-5">
     <h3 style="font-weight: 300;">Top-10-Games in your country</h3>
 
     <swiper-container swiperElement init="false">
         <swiper-slide *ngFor="let game of games" class="slide">
-            <a href="https://localhost:4200/game/details/id">
+            <a (click)="toDetailsPage(game.id)">
                 <img width="100%" [src]="game.image_link"
                     onerror="this.onerror=null; this.src='assets/images/placeholdersquare/image-placeholder-500x500.jpg'"
                     alt="randomized image">
@@ -43,7 +18,7 @@
 
     <swiper-container swiperElement init="false">
         <swiper-slide *ngFor="let game of games" class="slide">
-            <a href="https://localhost:4200/game/details/id">
+            <a (click)="toDetailsPage(game.id)">
                 <img width="100%" [src]="game.image_link"
                     onerror="this.onerror=null; this.src='assets/images/placeholdersquare/image-placeholder-500x500.jpg'"
                     alt="randomized image">
@@ -58,7 +33,7 @@
 
     <swiper-container swiperElement init="false">
         <swiper-slide *ngFor="let game of games" class="slide">
-            <a href="https://localhost:4200/game/details/id">
+            <a (click)="toDetailsPage(game.id)">
                 <img width="100%" [src]="game.image_link"
                     onerror="this.onerror=null; this.src='assets/images/placeholdersquare/image-placeholder-500x500.jpg'"
                     alt="randomized image">
@@ -73,7 +48,7 @@
 
     <swiper-container swiperElement init="false">
         <swiper-slide *ngFor="let game of sportsGames" class="slide">
-            <a href="https://localhost:4200/game/details/id">
+            <a (click)="toDetailsPage(game.id)">
                 <img width="100%" [src]="game.image_link"
                     onerror="this.onerror=null; this.src='assets/images/placeholdersquare/image-placeholder-500x500.jpg'"
                     alt="randomized image">
@@ -82,3 +57,6 @@
         </swiper-slide>
     </swiper-container>
 </div>
+
+
+
