--- a/client/src/app/footer/footer.component.html
+++ b/client/src/app/footer/footer.component.html
@@ -6,16 +6,16 @@
         <div class="col-md-4">
             <ul class="list-unstyled">
                 <li>
-                    <a href="">Hire Me</a>
+                    <a href="https://www.patrick-kuehlen.de/">Hire Me</a>
                 </li>
                 <li>
-                    <a href="">Support Me</a>
+                    <a href="https://www.patrick-kuehlen.de/">Support Me</a>
                 </li>
                 <li>
-                    <a href="">Watch Me</a>
+                    <a href="https://github.com/McMagnific">Watch Me</a>
                 </li>
                 <li>
-                    <a href="">About Me</a>
+                    <a href="https://www.patrick-kuehlen.de/">About Me</a>
                 </li>
             </ul>
         </div>
@@ -33,15 +33,14 @@
         <div class="col-md-4">
             <ul class="list-unstyled">
                 <li>
-                    <a href="">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/patrick-k%C3%BChlen-90891818a/">LinkedIn</a>
                 </li>
                 <li>
-                    <a href="">Github</a>
+                    <a href="https://github.com/McMagnific">Github</a>
                 </li>
                 <li>
-                    <a href="">Website</a>
+                    <a href="https://www.patrick-kuehlen.de/">Website</a>
                 </li>
-
             </ul>
         </div>
     </div>
