--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,12 +1,12 @@
 <div class="card border-0 ">
-    <img src="assets/images/Salesbanneraugust.png" class="card-img-top" alt="...">
-    <div class="card-body d-flex justify-content-between align-items-center ps-5 pe-5 pt-5">
+    <img src="assets/images/Salesbannerseptember.webp" class="card-img-top rounded-0" alt="...">
+    <div class="card-body d-flex justify-content-between align-items-center ps-5 pe-5 pt-5 ">
         <div>
-            <h3 class="card-title"> Time to get some Sales Action</h3>
-            <p>Are you serious? Come if you dare. . . </p>
+            <h3 class="card-title"> Summer leaves </h3>
+            <p>For some great Deals</p>
         </div>
         <div>
-            <button class="btn btn-primary">get game</button>
+            <button [routerLink]="'/deals'" class="btn btn-primary ">To The Deals</button>
         </div>
     </div>
 </div>
