--- a/client/src/app/nav-menu/nav-menu.component.html
+++ b/client/src/app/nav-menu/nav-menu.component.html
@@ -36,7 +36,7 @@
       <!-- Dropdown Menu -->
       <div class="btn-group" dropdown placement="bottom right">
         <a id="button-animated" dropdownToggle>
-          <img src="assets/images/placeholdersquare/image-placeholder-500x500.jpg" alt="">
+          <img src="assets/images/placeholdersquare/image-placeholder-500x500.jpg" alt="placeholder">
         </a>
 
         <div id="dropdown-animated" *dropdownMenu class="dropdown-menu dropdown-menu-right mt-3">
